--- a/requirements.txt
+++ b/requirements.txt
@@ -1,33 +1,21 @@
-appdirs==1.4.4
-bcrypt==3.2.0
-black==21.5b1
-certifi==2020.12.5
-cffi==1.14.5
-chardet==4.0.0
-click==7.1.2
-cryptography==3.4.7
-fastapi==0.65.1
-greenlet==1.1.0
-h11==0.12.0
-idna==2.10
-importlib-metadata==4.0.1
-loguru==0.5.3
-mypy-extensions==0.4.3
+annotated-types==0.6.0
+anyio==4.2.0
+certifi==2023.11.17
+charset-normalizer==3.3.2
+click==8.1.7
+fastapi==0.109.0
+h11==0.14.0
+idna==3.6
+loguru==0.7.2
 passlib==1.7.4
-pathspec==0.8.1
-psycopg2-binary==2.8.6
-pycparser==2.20
-pydantic==1.8.2
-PyJWT==2.1.0
-python-multipart==0.0.5
-regex==2021.4.4
-requests==2.25.1
-six==1.16.0
-SQLAlchemy==1.4.15
-starlette==0.14.2
-toml==0.10.2
-typed-ast==1.4.3
-typing-extensions==3.10.0.0
-urllib3==1.26.4
-uvicorn==0.13.4
-zipp==3.4.1
+pydantic==2.5.3
+pydantic_core==2.14.6
+PyJWT==2.8.0
+python-multipart==0.0.6
+requests==2.31.0
+sniffio==1.3.0
+SQLAlchemy==2.0.25
+starlette==0.35.1
+typing_extensions==4.9.0
+urllib3==2.1.0
+uvicorn==0.26.0
